# search_vulns

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  config.json  config.py  config_mariadb.json  cpe_version.py  create_sql_statements.json  create_tables_queries.json  cve_completeness_tests.py  cveid_to_edbid.json  description_completeness_tests.py  export_database_as_csv.py  install.sh  main.py  man_equiv_cpes.json  migrate_sqlite_to_mariadb.sh  pyproject.toml  requirements.txt  search_vulns.py  search_vulns_cli.py  setup.py  test_cve_completeness.py  test_exploit_completeness.py  updater.py  vulnerability.py  web_server.py
.github/: FUNDING.yml
.github/workflows/: main.yml  publish_pypi_package_on_new_release.yml  run_tests.yml  tests.yml  update_release_assets.yml
db_build/: main_builder.py
db_build/core/build_source_cpp/: create_db.cpp  database_wrapper.cpp
db_creation_src/: CMakeLists.txt  create_db.cpp  database_wrapper.cpp  database_wrapper.h  prepared_statement.cpp  prepared_statement.h
modules/: utils.py
modules/cpe_search/: build.py  search_vulns_cpe_search.py
modules/cpe_search/resources/: debian_equiv_cpes.json  man_equiv_cpes.json
modules/end_of_life_date/: search_vulns_eold.py
modules/epss/: search_vulns_epss.py
modules/exploit_db/: search_vulns_edb.py
modules/ghsa/: build.py  search_vulns_ghsa.py
modules/linux_distro_backpatches/debian/: build.py  search_vulns_debian.py
modules/msf_exploits/: search_vulns_msf_exploits.py
modules/nvd/: build.py  search_vulns_nvd.py
modules/nvd/create_db_source/: CMakeLists.txt  create_db.cpp  database_wrapper.cpp  database_wrapper.h
modules/poc_in_github/: search_vulns_poc_in_github.py
modules/template/: search_vulns_template.py
modules/vulncheck/: build.py  search_vulns_nvdpp.py
resources/: create_sql_statements.json  debian_equiv_cpes.json  ghsa_hardcoded_matches.json  license_infos.md  man_equiv_cpes.json  migrate_sqlite_to_mariadb.sh
search_vulns/: __init__.py  config.json  cpe_version.py  post_install.py  search_vulns.py  search_vulns_cli.py  updater.py  web_server.py  wsgi.py
search_vulns/modules/: utils.py
search_vulns/modules/cpe_search/: build.py  install.sh  search_vulns_cpe_search.py
search_vulns/modules/cpe_search/resources/: man_equiv_cpes.json
search_vulns/modules/end_of_life_date/: build.py  search_vulns_eold.py
search_vulns/modules/exploit_db/: build.py  search_vulns_edb.py
search_vulns/modules/ghsa/: build.py  ghsa_hardcoded_matches.json  search_vulns_ghsa.py
search_vulns/modules/linux_distro_backpatches/: utils.py
search_vulns/modules/linux_distro_backpatches/debian/: build.py  search_vulns_debian.py
search_vulns/modules/nvd/: build.py  create_sql_statements.json  install.sh  search_vulns_nvd.py
search_vulns/modules/poc_in_github/: build.py
search_vulns/modules/template/: search_vulns_template.py
search_vulns/modules/vulncheck/: build.py  search_vulns_nvdpp.py
search_vulns/web_server_files/: README.md  nginx.conf.sample  package.json  tailwind.config.js
search_vulns/web_server_files/static/css/: daisyui.css
search_vulns/web_server_files/templates/: api-setup.html  base.html  news.html
search_vulns_modules/: config.py  generic_functions.py  process_distribution_matches.py  process_nvd_matches.py  search_vulns.py  search_vulns_functions.py
src/search_vulns/: cli.py  cli_backend.py  cli_formatters.py  cli_interactive.py  config.json  config_mariadb.json  core.py  cpe_version.py  install.sh  installer.py  search_vulns.py  updater.py  vulnerability.py  web_server.py  wsgi.py
src/search_vulns/cli/: backend.py  formatters.py  interactive.py  main.py
src/search_vulns/models/: SearchVulnsResult.py  Severity.py  Vulnerability.py
src/search_vulns/modules/: utils.py
src/search_vulns/modules/cpe_search/: build.py  search_vulns_cpe_search.py
src/search_vulns/modules/end_of_life_date/: build.py  eold_hardcoded_matches.json  search_vulns_eold.py
src/search_vulns/modules/epss/: search_vulns_epss.py
src/search_vulns/modules/euvd/: search_vulns_euvd.py
src/search_vulns/modules/exploit_db/: build.py  search_vulns_edb.py
src/search_vulns/modules/ghsa/: build.py  ghsa_hardcoded_matches.json  search_vulns_ghsa.py
src/search_vulns/modules/linux_distro_backpatches/: hardcoded_pkg_cpe_map.json  search_vulns_download_resources.py  utils.py
src/search_vulns/modules/misc/: search_vulns_kevintel.py  (+2 more)
src/search_vulns/modules/nvd/create_db_source/: CMakeLists.txt  create_db.cpp  database_wrapper.h
src/search_vulns/resources/: SearchVulnsResult_schema.json  search_vulns_openapi.yaml  sqlite_to_mariadb.sh
src/search_vulns/web_server_files/: api_models.py  package-lock.json  package.json  tailwind.config.js  tailwind_input.css
tests/: description_completeness_tests.py  exploit_completeness_tests.py  run_all_tests.sh  test_cli_backend.py  test_cli_formatters.py  test_cli_integration.py  test_cli_interactive.py  test_cve_attr_completeness.py  test_cve_completeness.py  test_debian_backpatches.py  test_debian_queries.py  test_eol_date.py  test_exploit_completeness.py  test_ghsa_completeness.py  test_redhat_backpatches.py  test_redhat_queries.py  test_related_queries.py  test_ubuntu_backpatches.py  test_ubuntu_queries.py  test_version_comparison.py  test_version_considered_equal.py  test_vuln_id_search.py
updates/: create_sql_statements.json  man_mapping.json  migrate_sqlite_to_mariadb.sh  update_cpes.py  update_debian.py  update_distributions_generic.py  update_generic.py  update_nvd.py  update_redhat.py  update_ubuntu.py  updater.py
web_server_files/: nginx.conf.sample  package-lock.json  tailwind.config.js
web_server_files/static/: search_vulns_openapi.yaml
web_server_files/static/css/: bootstrap-select.min.css  custom.css  daisyui.css  flowbite-custom.css  search_vulns.css
web_server_files/static/js/: bootstrap-select.min.js  search_vulns.js  search_vulns_api.js  search_vulns_theme.js
web_server_files/templates/: about.html  api-setup.html  base.html  index.html  news.html  usage.html
(+28 files in other folders)
