[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "search-vulns"
version = "0.7.4"
description = "Search for known vulnerabilities in software using software titles or a CPE 2.3 string. Note: This package requires system dependencies (git, sqlite3, libsqlite3-dev, libmariadb-dev, jq) which must be installed separately via your system package manager."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dustin Born", email = "ra1nb0rn@protonmail.com"}
]
keywords = ["security", "vulnerability", "cve", "cpe", "nvd", "exploit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "requests",
    "aiohttp",
    "aiolimiter",
    "ujson",
    "cvss",
]

[project.optional-dependencies]
web = [
    "Flask",
    "gunicorn",
    "gevent",
    "markdown",
]
mariadb = [
    "mariadb==1.1.12",
]
dev = [
    "black",
    "isort",
    "ruff",
    "pylint",
]
all = [
    "Flask",
    "gunicorn",
    "gevent",
    "markdown",
    "mariadb==1.1.12",
    "aiohttp",
    "aiolimiter",
    "ujson",
    "cvss",
]

[project.scripts]
search_vulns = "search_vulns.search_vulns_cli:main"

[project.urls]
Homepage = "https://github.com/ra1nb0rn/search_vulns"
Documentation = "https://github.com/ra1nb0rn/search_vulns"
Repository = "https://github.com/ra1nb0rn/search_vulns"
Issues = "https://github.com/ra1nb0rn/search_vulns/issues"

[tool.black]
line-length = 96
target-version = ['py311']
exclude = '''
(modules/nvd/create_db_source/.*|modules/cpe_search/cpe_search/test_cpe_suggestions.py|modules/template/.*)
'''

[tool.isort]
profile = "black"
skip = ["modules/nvd/create_db_source/"]

[tool.ruff]
line-length = 96
target-version = "py311"
select = ["ALL"]
ignore = ["S104", "S201", "T201", "TRY201", "COM812", "E501", "TRY003", "EM101"]
exclude = ["modules/nvd/create_db_source"]

[tool.pylint.MASTER]
ignore-paths = "modules/nvd/create_db_source/.*"

[tool.pylint."FORMAT"]
max-line-length = 96
