[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "search_vulns"
version = "0.9.0"
description = "Search for known vulnerabilities in software using software titles or a CPE 2.3 string."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Dustin Born", email = "search.vulns1@gmail.com"}
]
keywords = ["security", "vulnerability", "cve", "cpe", "nvd", "exploit", "pentest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "cpe_search==0.1.7",
    "requests",
    "aiohttp",
    "aiolimiter",
    "ujson",
    "cvss",
    "tqdm",
    "univers",
]

[project.optional-dependencies]
web = [
    "Flask",
    "gunicorn",
    "gevent",
    "markdown",
]
mariadb = [
    "mariadb==1.1.12",
]
dev = [
    "black",
    "isort",
    "ruff",
    "pylint",
]
all = [
    "cpe_search==0.1.7",
    "requests",
    "aiohttp",
    "aiolimiter",
    "ujson",
    "cvss",
    "tqdm",
    "univers",
    "Flask",
    "gunicorn",
    "gevent",
    "markdown",
    "mariadb==1.1.12",
]

[project.scripts]
search_vulns = "search_vulns.cli:main"

[project.urls]
Homepage = "https://search-vulns.com"
Documentation = "https://github.com/ra1nb0rn/search_vulns"
Repository = "https://github.com/ra1nb0rn/search_vulns"
Issues = "https://github.com/ra1nb0rn/search_vulns/issues"

[tool.black]
line-length = 96
target-version = ['py311']
exclude = '''
(src/search_vulns/modules/nvd/create_db_source/.*|src/search_vulns/modules/template/.*)
'''

[tool.isort]
profile = "black"
skip = ["src/search_vulns/modules/nvd/create_db_source/"]

[tool.ruff]
line-length = 96
target-version = "py311"
select = ["ALL"]
ignore = ["S104", "S201", "T201", "TRY201", "COM812", "E501", "TRY003", "EM101"]
exclude = ["src/search_vulns/modules/nvd/create_db_source"]

[tool.pylint.MASTER]
ignore-paths = "src/search_vulns/modules/nvd/create_db_source/.*"

[tool.pylint."FORMAT"]
max-line-length = 96
